Fix: Changed Theme Style header color to Blue in Dark Mode and Changed Arrow to Chevron

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -184,19 +184,6 @@ select {
 		background-color: $theme-dark-dark;
 	}
 
-	//Kit Editor
-	@at-root {
-		.elementor-editor-kit {
-
-			.elementor-panel {
-
-				#elementor-panel-header {
-					background-color: $theme-dark-dark;
-				}
-			}
-		}
-	}
-
 	.elementor-panel-navigation {
 		background-color: $theme-dark-gray-dark;
 
